<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:ignore="SpeakableTextPresentCheck">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".View.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/search"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minWidth="50dp"
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="#757575"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/logo"
                        android:src="@drawable/search"
                        app:tint="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/trend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight=".46"
                    android:background="@drawable/btn1"
                    android:padding="5dp"
                    android:text="@string/trending"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn2"
                    android:padding="5dp"
                    android:text="@string/nature"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn3"
                    android:padding="5dp"
                    android:text="@string/cars"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn4"
                    android:padding="5dp"
                    android:text="@string/games"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/god"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn5"
                    android:padding="5dp"
                    android:text="@string/god"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>


</ScrollView>